static/style.css
/* This CSS loaded from extend_head.html */

img:not([aria-label="logo"]) {
  height: auto;
}

/* Make img and caption for figure default to align center. */
.post-content figure {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.post-content figure > figcaption {
  text-align: center;
}

/* Undo nowrap set by theme. */
/* This fixes the broken layout on smaller breakpoints
because of the custom footer partial which has longer sentences. */
.footer span:last-child {
  white-space: unset;
}

footer .footer-blank {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 60vh;
}

